# Blocks

./: .gitignore  Cargo.toml  LICENSE  compile.sh  setup.py
crates/benches/: Cargo.toml
crates/benches/src/: dyad.rs  rms_dyad_relu.rs
crates/blocks/: Cargo.toml
crates/blocks/src/: blas.rs  block.rs  lib.rs  types.rs  utils.rs
crates/blocks/src/activations/: relu.rs
crates/blocks/src/layer/: layer.rs  layer_allocations.rs  mod.rs
crates/blocks/src/linear_blocks/: mod.rs
crates/blocks/src/non_linear_blocks/: mod.rs  rms_dyad_relu.rs
crates/blocks/src/norm/: rms_norm.rs
crates/blocks/src/types/: array.rs  float.rs  mod.rs  option.rs  tuples.rs  types.rs
crates/blocks_extension/: Cargo.toml  pyproject.toml
crates/blocks_extension/src/: conversion.rs  lib.rs
crates/blocks_extension/src/api/: mod.rs
crates/blocks_extension/src/api/blocks/: blocks.rs  mod.rs
crates/blocks_extension/src/api/blocks/activations/: relu.rs
crates/blocks_extension/src/api/blocks/linear_blocks/dyad_block/: dyad_block.rs  mod.rs  types.rs
crates/blocks_extension/src/api/blocks/non_linear_blocks/: rms_dyad_relu.rs
crates/blocks_extension/src/api/blocks/norm/: rms_norm.rs
crates/blocks_extension/src/types/: array.rs
pyblocks/blocks/: dyad.py
pyblocks/blocks/activations/: relu.py
pyblocks/blocks/linear/: dyad.py
pyblocks/blocks/non_linear/: rms_dyad_relu.py
pyblocks/blocks/norm/: rms_norm.py
pyblocks/native/blocks/: dyad.py
pyblocks/native/blocks/linear/: dyad.py
tests/blocks/: test_dyad.py  test_relu.py  test_rms_dyad_relu.py  test_rms_norm.py
(+9 files in other folders)
