[package]
name = "blocks_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blocks_extension"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.1"
numpy = "0.19.0"
blocks = {path = "../blocks"}